--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
-        "illuminate/view": "^5.5|^6.0|^7.0|^8.0"
+        "php": ">=8.0",
+        "illuminate/view": "^5.5|^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0|^7.0",
